# robotool-meta-physmod

./: .gitignore  .gitmodules  README.md  pom.xml
.github/workflows/: build.yml
Examples/CaseStudies/: README.md
Examples/CaseStudies/Acrobot/Acrobot_CGA/: .project  Acrobot_CGA.pm  representations.aird
Examples/CaseStudies/Acrobot/Acrobot_Featherstone/: .project  Acrobot_Featherstone.pm  representations.aird
Examples/CaseStudies/Acrobot/Acrobot_SKO/: .project  Acrobot_SKO.pm
Examples/CaseStudies/Acrobot/Acrobot_SKO_controlled/: .project  Acrobot_SKO_controlled.pm  mapping.pm  representations.aird
Examples/CaseStudies/FourBar/4BarPlanarLinkage/: .project  4BarPlanarLinkage.pm  representations.aird
Examples/CaseStudies/MobileRobot/MobileRobotOA/: .project  OA_mapping.pm  ObstacleAvoidance_OneStateMachine.rst  (+2 more)
Examples/ReferenceImplementations/Acrobot/: CMakeLists.txt  test_bias.cpp  test_jain_parity.cpp  test_matrix  test_matrix.cpp
Examples/ReferenceImplementations/AcrobotCGA/: CMakeLists.txt
Examples/ReferenceImplementations/AcrobotCGA/src/: interfaces.hpp  orchestrator.cpp  platform1_engine.cpp  platform1_state.hpp  visualization_client.h
Examples/ReferenceImplementations/AcrobotControlled/: CMakeLists.txt
Examples/ReferenceImplementations/AcrobotControlled_ManualController/: CMakeLists.txt
Examples/ReferenceImplementations/AcrobotFeatherstone/: compare_trajectories.py
Examples/ReferenceImplementations/FourBar/: CMakeLists.txt  drake_fourbar_trajectory.py  fourbar_mujoco.xml  mujoco_fourbar_trajectory.py  trajectory_drake_fourbar.csv  trajectory_fourbar.csv  trajectory_mujoco_fourbar.csv  trajectory_mujoco_fourbar_euler.csv
Examples/ReferenceImplementations/MobileRobot/: CMakeLists.txt
Examples/ReferenceImplementations/MobileRobot/src/: CacheConsM.c  interface.h  orchestrator.cpp  platform1_engine.cpp  platform_mapping.h  platform_mapping_adapter.cpp  utils.h  world_engine.cpp  world_mapping.h
Examples/ReferenceImplementations/SimpleArm/: .gitignore  CMakeLists.txt
Examples/ToolDemo/: README.md
physmod-libs/: .gitignore  .project  pom.xml
physmod-libs/circus.robocalc.robosim.physmod.libs.eqnComp/: .classpath  .project  pom.xml
physmod-libs/circus.robocalc.robosim.physmod.libs.guidedChoice/: .project  build.properties  pom.xml
physmod-libs/circus.robocalc.robosim.physmod.libs.sourceCodeGen/: .classpath  .project  pom.xml
physmod-libs/circus.robocalc.robosim.physmod.libs.target/: .project  circus.robocalc.robosim.physmod.libs.target.target  pom.xml
physmod-libs/circus.robocalc.robosim.physmod.libs.textual/: .classpath  .project  build.properties  pom.xml
physmod-libs/eqnComp/CGA/: CGA_serial.sln
physmod-sourceCodeGen/: .gitignore  .project  README.md  pom.xml
physmod-sourceCodeGen/circus.robocalc.robosim.physmod.generator.sourceCodeGen/: .classpath  .project  build.properties  plugin.properties  plugin.xml  pom.xml
physmod-sourceCodeGen/circus.robocalc.robosim.physmod.generator.sourceCodeGen.feature/: .project  build.properties  feature.xml  pom.xml
physmod-sourceCodeGen/circus.robocalc.robosim.physmod.generator.sourceCodeGen.target/: .project  circus.robocalc.robosim.physmod.generator.sourceCodeGen.target.target  pom.xml
physmod-sourceCodeGen/circus.robocalc.robosim.physmod.generator.sourceCodeGen.tests/: .classpath  .gitignore  .project  build.properties  pom.xml
physmod-sourceCodeGen/circus.robocalc.robosim.physmod.generator.sourceCodeGen.tests/src/: log4j.properties
physmod-sourceCodeGen/circus.robocalc.robosim.physmod.generator.sourceCodeGen.update/: .project  category.xml  pom.xml
physmod-testdata/: pom.xml
physmod-testdata/circus.robocalc.robosim.physmod.testdata/: README.md  build.properties  pom.xml
physmod-testdata/circus.robocalc.robosim.physmod.testdata.target/: circus.robocalc.robosim.physmod.testdata.target.target  pom.xml
physmod-testdata/circus.robocalc.robosim.physmod.testdata/testdata/integration/T5/SKO/fullSimulation_visualisation/expected/stage2/: CMakeLists.txt
physmod-testdata/circus.robocalc.robosim.physmod.testdata/testdata/integration/T5/SKO/fullSimulation_visualisation/expected/stage2/src/: orchestrator.cpp  platform1_engine.cpp  platform1_state.hpp  platform_mapping_adapter.cpp  visualization_client.h  visualization_server.cpp
robotool-customization/: .project  about.ini  about.mappings  about.properties  build.properties  plugin.xml  plugin_customization.ini  pom.xml
robotool-customization-repository/: .project  category.xml  pom.xml
robotool-feature/: .project  feature.xml  pom.xml
robotool-physmod-product/: .project  RoboTool.p2.inf  RoboTool.product  content.xslt  pom.xml
robotool-physmod-repository/: category.xml  pom.xml
robotool-product/: RoboTool.product  build.properties  pom.xml
robotool-repository/: category.xml  pom.xml
slnDF-textual/: .gitignore  Readme.md  pom.xml
slnDF-textual/circus.robocalc.robosim.physmod.slnDF/: .gitignore  build.properties  plugin.xml  pom.xml
slnDF-textual/circus.robocalc.robosim.physmod.slnDF.feature/: feature.xml  pom.xml
slnDF-textual/circus.robocalc.robosim.physmod.slnDF.ide/: pom.xml
slnDF-textual/circus.robocalc.robosim.physmod.slnDF.target/: SlnDF-textual.target.target  pom.xml  pom_backup.xml
slnDF-textual/circus.robocalc.robosim.physmod.slnDF.tests/: pom.xml
slnDF-textual/circus.robocalc.robosim.physmod.slnDF.ui/: plugin.xml  pom.xml
slnDF-textual/circus.robocalc.robosim.physmod.slnDF.ui.tests/: pom.xml
slnRef-textual/: pom.xml
slnRef-textual/circus.robocalc.robosim.physmod.slnRef/: plugin.xml  pom.xml
slnRef-textual/circus.robocalc.robosim.physmod.slnRef.feature/: feature.xml  pom.xml
slnRef-textual/circus.robocalc.robosim.physmod.slnRef.ide/: pom.xml
slnRef-textual/circus.robocalc.robosim.physmod.slnRef.target/: circus.robocalc.robosim.physmod.slnRef.target.target  pom.xml
slnRef-textual/circus.robocalc.robosim.physmod.slnRef.tests/: pom.xml
slnRef-textual/circus.robocalc.robosim.physmod.slnRef.ui/: plugin.xml  pom.xml
slnRef-textual/circus.robocalc.robosim.physmod.slnRef.ui.tests/: pom.xml
(+770 files in other folders)
